--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -46,3 +46,11 @@ button,
         cursor: pointer;
     }
 }
+
+.btn-round {
+    font-family: inherit;
+    padding: 10px 32px;
+    color: inherit;
+    background-color: inherit;
+    border-radius: 24px;
+}
