--- a/src/assets/styles/cmps/_home-header.scss
+++ b/src/assets/styles/cmps/_home-header.scss
@@ -5,6 +5,7 @@
         justify-content: space-between;
         align-items: center;
         padding-top: 73px;
+        padding-bottom: 133px;
 
         .header-main-content {
             align-items: center;
